--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -20,7 +20,7 @@ a:hover {
     margin-right:   0;
 }
 .container {
-    padding: 0;
+    // padding: 0;
 
     @include max_tablet {
         padding: 0 25px 5px;
