added social icons to desktop views. resolve #2

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -106,27 +106,42 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   padding: 15px 0;
 }
 
-/* line 40, ../scss/_mixins.scss */
+/* line 16, ../scss/_mixins.scss */
+.pad-content {
+  padding: 10px 0;
+}
+
+/* line 19, ../scss/_mixins.scss */
+.pad-none {
+  padding: 0;
+}
+
+/* line 22, ../scss/_mixins.scss */
+.width-100 {
+  width: 100%;
+}
+
+/* line 49, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 55, ../scss/_mixins.scss */
+/* line 64, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 63, ../scss/_mixins.scss */
-.image, .sidebar, .thumbnail .thumb-content, .mq-list li {
+/* line 72, ../scss/_mixins.scss */
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -226,27 +241,42 @@ time {
   padding: 15px 0;
 }
 
-/* line 40, ../scss/_mixins.scss */
+/* line 16, ../scss/_mixins.scss */
+.pad-content {
+  padding: 10px 0;
+}
+
+/* line 19, ../scss/_mixins.scss */
+.pad-none {
+  padding: 0;
+}
+
+/* line 22, ../scss/_mixins.scss */
+.width-100 {
+  width: 100%;
+}
+
+/* line 49, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 55, ../scss/_mixins.scss */
+/* line 64, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 63, ../scss/_mixins.scss */
-.image, .sidebar, .thumbnail .thumb-content, .mq-list li {
+/* line 72, ../scss/_mixins.scss */
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -398,45 +428,48 @@ p {
   position: fixed;
 }
 
+@media only all and (max-width: 991px) {
+  /* line 24, ../scss/_navbar.scss */
+  .nav > li > a {
+    padding: 15px 9px 15px;
+  }
+}
 @media only all and (max-width: 767px) {
   /* line 24, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 0 0 15px 15px;
   }
 }
-/* line 29, ../scss/_navbar.scss */
+/* line 32, ../scss/_navbar.scss */
 .nav > li > a:hover, .nav > li > a:focus {
   background-color: transparent;
 }
 
-/* line 34, ../scss/_navbar.scss */
+/* line 37, ../scss/_navbar.scss */
 .navbar {
   margin-bottom: -150px;
   font-family: "Dosis", sans-serif;
   text-transform: uppercase;
 }
-/* line 39, ../scss/_navbar.scss */
+/* line 42, ../scss/_navbar.scss */
 .navbar a {
   font-size: 15px;
   letter-spacing: 3px;
 }
-/* line 43, ../scss/_navbar.scss */
+/* line 46, ../scss/_navbar.scss */
 .navbar a.active {
   color: white !important;
 }
 
-/* line 49, ../scss/_navbar.scss */
+/* line 52, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
 
-/* line 53, ../scss/_navbar.scss */
+/* line 56, ../scss/_navbar.scss */
 .navbar-inverse {
   background-color: black;
   border: 0;
-  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* .navbar-collapse{
@@ -445,7 +478,7 @@ p {
     border-top: 0 !important;
 } */
 /* Buttons */
-/* line 67, ../scss/_navbar.scss */
+/* line 70, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #0074a2;
   border-color: #0074a2;
@@ -455,7 +488,7 @@ p {
   transition: background-color, 0.25s;
 }
 
-/* line 72, ../scss/_navbar.scss */
+/* line 75, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #2ea2cc;
   border-color: #2ea2cc;
@@ -466,24 +499,24 @@ p {
 }
 
 /* Affix */
-/* line 79, ../scss/_navbar.scss */
+/* line 82, ../scss/_navbar.scss */
 #home .affix {
   width: 100%;
   top: 0;
 }
 
-/* line 83, ../scss/_navbar.scss */
+/* line 86, ../scss/_navbar.scss */
 #home .affix-top {
   margin-top: -50px;
 }
 @media only all and (max-width: 767px) {
-  /* line 83, ../scss/_navbar.scss */
+  /* line 86, ../scss/_navbar.scss */
   #home .affix-top {
     margin-top: 0;
   }
 }
 
-/* line 91, ../scss/_navbar.scss */
+/* line 94, ../scss/_navbar.scss */
 #standard .affix,
 #standard .affix-top {
   width: 100%;
@@ -492,7 +525,7 @@ p {
 
 /* Responsive: Portrait mobile and below */
 @media screen and (max-width: 768px) {
-  /* line 99, ../scss/_navbar.scss */
+  /* line 102, ../scss/_navbar.scss */
   .affix-top {
     width: 100%;
     position: fixed;
@@ -501,12 +534,12 @@ p {
   }
 
   /* Logo */
-  /* line 106, ../scss/_navbar.scss */
+  /* line 109, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 109, ../scss/_navbar.scss */
+  /* line 112, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
@@ -530,27 +563,42 @@ p {
   padding: 15px 0;
 }
 
-/* line 40, ../scss/_mixins.scss */
+/* line 16, ../scss/_mixins.scss */
+.pad-content {
+  padding: 10px 0;
+}
+
+/* line 19, ../scss/_mixins.scss */
+.pad-none {
+  padding: 0;
+}
+
+/* line 22, ../scss/_mixins.scss */
+.width-100 {
+  width: 100%;
+}
+
+/* line 49, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 55, ../scss/_mixins.scss */
+/* line 64, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 63, ../scss/_mixins.scss */
-.image, .sidebar, .thumbnail .thumb-content, .mq-list li {
+/* line 72, ../scss/_mixins.scss */
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -750,27 +798,42 @@ section .col-sm-5, section .col-md-6 {
   padding: 15px 0;
 }
 
-/* line 40, ../scss/_mixins.scss */
+/* line 16, ../scss/_mixins.scss */
+.pad-content {
+  padding: 10px 0;
+}
+
+/* line 19, ../scss/_mixins.scss */
+.pad-none {
+  padding: 0;
+}
+
+/* line 22, ../scss/_mixins.scss */
+.width-100 {
+  width: 100%;
+}
+
+/* line 49, ../scss/_mixins.scss */
 #row-masthead {
   background-color: black;
   background-attachment: fixed;
   background-size: cover;
 }
 
-/* line 55, ../scss/_mixins.scss */
+/* line 64, ../scss/_mixins.scss */
 code, pre, .highlight {
   background-color: #666;
   border-color: #666;
 }
 
-/* line 59, ../scss/_mixins.scss */
+/* line 68, ../scss/_mixins.scss */
 .thumbnail {
   background-color: transparent;
   border: 0;
 }
 
-/* line 63, ../scss/_mixins.scss */
-.image, .sidebar, .thumbnail .thumb-content, .mq-list li {
+/* line 72, ../scss/_mixins.scss */
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -979,67 +1042,91 @@ body {
 }
 
 /* line 75, ../scss/custom.scss */
-.pad-content {
-  padding: 10px 0;
+#social-nav {
+  position: relative;
 }
-
 /* line 78, ../scss/custom.scss */
-.pad-none {
-  padding: 0;
+#social-nav ul {
+  position: absolute;
+  top: -35px;
+  right: 0px;
+}
+@media only all and (max-width: 767px) {
+  /* line 78, ../scss/custom.scss */
+  #social-nav ul {
+    right: 60px;
+  }
+}
+/* line 87, ../scss/custom.scss */
+#social-nav ul li {
+  padding-left: 0;
+  padding-right: 3px;
+}
+/* line 92, ../scss/custom.scss */
+#social-nav img {
+  width: 17px;
+  height: 17px;
 }
 
-/* line 81, ../scss/custom.scss */
-.width-100 {
-  width: 100%;
-}
-
-/* line 88, ../scss/custom.scss */
+/* line 101, ../scss/custom.scss */
 .mq-list {
   padding-top: 30px;
 }
-/* line 90, ../scss/custom.scss */
+/* line 103, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
-@media only all and (max-width: 991px) {
-  /* line 90, ../scss/custom.scss */
+@media only all and (max-width: 1199px) {
+  /* line 103, ../scss/custom.scss */
   .mq-list li {
-    margin-right: 13px;
+    margin-right: 15px;
+  }
+}
+@media only all and (max-width: 991px) {
+  /* line 103, ../scss/custom.scss */
+  .mq-list li {
+    margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 90, ../scss/custom.scss */
+  /* line 103, ../scss/custom.scss */
   .mq-list li {
-    margin-right: 1.4%;
+    margin-right: 0.9%;
   }
 }
-/* line 102, ../scss/custom.scss */
+/* line 118, ../scss/custom.scss */
 .mq-list .smartphone {
-  width: 7.9%;
+  width: 8.1%;
 }
-/* line 105, ../scss/custom.scss */
+@media only all and (max-width: 1199px) {
+  /* line 118, ../scss/custom.scss */
+  .mq-list .smartphone {
+    width: 8%;
+  }
+}
+/* line 124, ../scss/custom.scss */
 .mq-list .tablet {
-  width: 19%;
+  width: 19.4%;
 }
-/* line 108, ../scss/custom.scss */
+/* line 127, ../scss/custom.scss */
 .mq-list .netbook {
-  width: 25.5%;
+  width: 25.9%;
 }
-/* line 111, ../scss/custom.scss */
+/* line 130, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
-  width: 40%;
+  width: 40.5%;
 }
 
 /* Admin Menu */
-/* line 119, ../scss/custom.scss */
+/* line 138, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
 
 /* IE 'browse happy' */
-/* line 124, ../scss/custom.scss */
+/* line 143, ../scss/custom.scss */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -1047,11 +1134,11 @@ body {
   padding: 0.2em 0;
 }
 
-/* line 131, ../scss/custom.scss */
+/* line 150, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 133, ../scss/custom.scss */
+/* line 152, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
