--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -13,6 +13,15 @@
 .v-pad {
     padding: 15px 0;
 }
+.pad-content {
+    padding: 10px 0;
+}
+.pad-none {
+    padding: 0;
+}
+.width-100 {
+    width: 100%;
+}
 
 @mixin center-vertically($h1, $h2) {
     position: fixed;
