--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -22,6 +22,9 @@
 }
 
 .nav > li > a {
+    @include max_laptop {
+        padding: 15px 9px 15px;
+    }
     @include max_tablet{
         padding: 0 0 15px 15px;
     }
