--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -47,9 +47,12 @@ body {
     }
 }
 .main-content{
-    padding: 30px 0 30px 0;
-    @include min_tablet {
-        padding: 70px 15px 70px 15px;
+    padding: 80px 15px 30px 15px;
+    @include max_tablet{
+        padding: 65px 0 30px 0;
+    }
+    @include max_phone{
+        padding: 40px 0 30px 0;
     }
 }
 .content{
